[tool.poetry]
name = "typed_dict_generator"
version = "0.2.1"
description = ""
authors = ["Emerentius <emerentius@arcor.de>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.8.3"
mypy = "^0.931"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
